@@ -65,6 +65,27 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.34</version>
+		</dependency>
+ 
+		<dependency>
+		    <groupId>org.ansj</groupId>
+		    <artifactId>ansj_seg</artifactId>
+		    <version>5.1.3</version>
+		</dependency>
+ 
+		<!--
+		<dependency>
+		    <groupId>com.ansj</groupId>
+		    <artifactId>ansj-seg</artifactId>
+		    <version>5.0.1</version>
+		</dependency>
+		-->
+
+
+		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.5</version>
@@ -564,6 +585,34 @@
                     </execution>
                 </executions>
             </plugin>
+            
+            
+             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                    <systemPropertyVariables>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>UTF-8</encoding>
+                    <showWarnings>true</showWarnings>
+                    <verbose>true</verbose>
+                </configuration>
+            </plugin>
+            
             
 		</plugins>
 	</build>
